--- a/BondTrading.html
+++ b/BondTrading.html
@@ -1,58 +1,124 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Bootstrap Example</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
-    <style>
-  /* Make the image fully responsive */
-  .carousel-inner img {
-    width: 100%;
-    height: 100%;
-  }
-  </style>
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
+    <meta name="Nifty Trader" content=""/>
+    <meta name="Narayanan" content=""/>
+    <title>Nifty Trader</title>
+    <!-- Favicon-->
+
+    <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
+    <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
+    <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="js/scripts.js"></script>
+    <link rel="icon" type="image/x-icon" href="img/niftytrader.ico"/>
+    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css"/>
+    <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css"/>
+    <!-- Core theme CSS (includes Bootstrap)-->
+    <link href="css/styles.css" rel="stylesheet"/>
 </head>
 <body>
+<!-- Navigation-->
+<nav class="navbar navbar-expand-sm" id="mainNav">
+    <a href="#" class="navbar-brand nifty-menu">
+        <img src="/img/niftytrader.ico" height="28" alt="Nifty Trader"> Nifty Trader
+    </a>
+    <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <ul class="navbar-nav ml-auto">
+        <li class="nav-item"><a class="nav-link nifty-menu" href="index.html">Home</a></li>
+        <li class="nav-item"><a class="nav-link nifty-menu" href="index.html#portfolio">Portfolio</a></li>
+        <li class="nav-item"><a class="nav-link nifty-menu" href="index.html#contact">Contact</a></li>
+        <li class="nav-item">
+                        <span class="navbar-text ml-auto nifty-menu"><a role="button" data-toggle="modal"
+                                                                        data-target="index.html#loginModal">Login</a></span>
+        </li>
+    </ul>
+</nav>
 
-<div class="container mt-3">
 
-    <h2>Carousel</h2>
-    <div id="myCarousel" class="carousel slide" data-ride="carousel">
+<div class=" container">
+    <div class="row row-content align-items-center">
+        <div class="col-md-8 mx-auto">
+            <div id="bondCarousel" class="carousel slide" data-ride="carousel">
+                <ol class="carousel-indicators">
+                    <li data-target="#bondCarousel" data-slide-to="0" class="active"></li>
+                    <li data-target="#bondCarousel" data-slide-to="1"></li>
+                    <li data-target="#bondCarousel" data-slide-to="2"></li>
+                </ol>
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img class="d-block w-100" src="img/portfolio/products/FixedRateBond.jpg"
+                             alt="Fixed Rate Bond"/>
+                        <div class="carousel-caption">
+                            <p class="d-none d-sm-block">
+                                Fixed Rate Bonds
+                            </p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block w-100" src="img/portfolio/products/FloatingBond.jpg" alt="Floating Bond"/>
+                        <div class="carousel-caption">
 
-        <!-- Indicators -->
-        <ul class="carousel-indicators">
-            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-            <li data-target="#myCarousel" data-slide-to="1"></li>
-            <li data-target="#myCarousel" data-slide-to="2"></li>
-        </ul>
+                            <p class="d-none d-sm-block">
+                                Floating Rate Bond
+                            </p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block w-100" src="img/portfolio/products/ZCBond.jpg" alt="Zero Coupon Bond"/>
+                        <div class="carousel-caption">
 
-        <!-- The slideshow -->
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img src="la.jpg" alt="Los Angeles" width="1100" height="500">
-            </div>
-            <div class="carousel-item">
-                <img src="chicago.jpg" alt="Chicago" width="1100" height="500">
-            </div>
-            <div class="carousel-item">
-                <img src="ny.jpg" alt="New York" width="1100" height="500">
+                            <p class="d-none d-sm-block">
+                                Zero Coupon Bond
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <a class="carousel-control-prev" href="#bondCarousel" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#bondCarousel" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon"></span>
+                    <span class="sr-only">Next</span>
+                </a>
+                <button class="btn btn-danger btn-sm" id="carouselButton">
+                    <i class="fa fa-pause"></i>
+                </button>
             </div>
         </div>
-
-        <!-- Left and right controls -->
-        <a class="carousel-control-prev" href="#myCarousel" data-slide="prev">
-            <span class="carousel-control-prev-icon"></span>
-        </a>
-        <a class="carousel-control-next" href="#myCarousel" data-slide="next">
-            <span class="carousel-control-next-icon"></span>
-        </a>
     </div>
 
+
+    <div class="row row-content align-items-center">
+        <div class="col-md-8 mx-auto">
+
+            <ul class="nav nav-tabs" role="tablist">
+                <li class="nav-item">
+                    <a class="nav-link active" href="#fixedbond" role="tab" data-toggle="tab">Fixed Rate Bond</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#floatingbond" role="tab" data-toggle="tab">Floating Bond</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#zcbond" role="tab" data-toggle="tab">Zero Coupon Bond</a>
+                </li>
+            </ul>
+
+            <!-- Tab panes -->
+            <div class="tab-content">
+                <div role="tabpanel" class="tab-pane fade in active" id="fixedbond">Fixed Rate Bond Description</div>
+                <div role="tabpanel" class="tab-pane fade" id="floatingbond">Floating Rate Bond Desc</div>
+                <div role="tabpanel" class="tab-pane fade" id="zcbond">Zero Coupon Bond Desc</div>
+            </div>
+        </div>
+    </div>
 </div>
+<!-- Tabs content -->
 
 </body>
 </html>
