equities trading work in progress

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-sm-6">
-                        <a class="portfolio-box" href="img/portfolio/fullsize/Equities.jpg" title="Equities Trading">
+                        <a class="portfolio-box" href="./EquitiesTrading.html" title="Equities Trading">
                             <img class="img-fluid" src="img/portfolio/thumbnails/Equities.jpg" alt="Equities Trading" />
 
                         </a>
@@ -144,8 +144,8 @@
                         </a>
                     </div>
                     <div class="col-sm-6">
-                        <a class="portfolio-box" href="img/portfolio/fullsize/Interest Rate Derivatives.jpg" title="Interest Rate Derivatives">
-                            <img class="img-fluid" src="img/portfolio/thumbnails/Interest Rate Derivatives.jpg" alt="Interest Rate Derivatives" />
+                        <a class="portfolio-box" href="./Cryptocurrencies.html" title="Cryptocurrencies">
+                            <img class="img-fluid" src="img/portfolio/thumbnails/Cryptocurrency.jpg" alt="Cryptocurrencies" />
 
                         </a>
                     </div>
@@ -162,7 +162,7 @@
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-lg-8 col-xl-6 text-center">
-                        <h2 class="mt-0">Please Say What You Feel!</h2>
+                        <h2 class="mt-0">Please Leave a Message</h2>
                         <hr class="divider" />
                         <p class="text-muted mb-5">Have questions about opening a trading account? Send us a messages and we will get back to you as soon as possible!</p>
                     </div>
