--- a/Cryptocurrencies.html
+++ b/Cryptocurrencies.html
@@ -40,11 +40,11 @@
 </nav>
 
 <header class="jumbotron jumbotron-fluid">
-    
+
     <div class="container">
         <div class="row">
             <div class="col-4 col-sm-3 col-md-2 align-self-center">
-                <img src="img/niftytrader.ico" class="img-fluid" />
+                <img src="img/niftytrader.ico" class="img-fluid"/>
             </div>
             <div class="col">
                 <h1>Start Trading Cryptocurrencies</h1>
@@ -56,60 +56,60 @@
 
 <div class="container">
     <h2>Crypto Currencies</h2>
-    <p>Today's Top Cryptocurrencies by Market Cap</p>            
+    <p>Today's Top Cryptocurrencies by Market Cap</p>
     <table class="table table-hover">
-      <thead>
+        <thead>
         <tr>
-          <th>Bitcoin</th>
-          <th>Price</th>
-          <th>24 hrs change %</th>
+            <th>Cryptocurrency</th>
+            <th>Price</th>
+            <th>24 hrs change %</th>
         </tr>
-      </thead>
-      <tbody>
+        </thead>
+        <tbody>
         <tr>
             <td>Bitcoin</td>
             <td>$43,415.26</td>
             <td><span class="nifty-down">-2.43%</span></td>
         </tr>
         <tr>
-          <td>Etherium</td>
-          <td>$3,095.89</td>
-          <td><span class="nifty-down">-2.01%</span></td>
+            <td>Etherium</td>
+            <td>$3,095.89</td>
+            <td><span class="nifty-down">-2.01%</span></td>
         </tr>
         <tr>
-          <td>Tether</td>
-          <td>$1.00</td>
-          <td><span class="nifty-down">-1.95%</span></td>
+            <td>Tether</td>
+            <td>$1.00</td>
+            <td><span class="nifty-down">-1.95%</span></td>
         </tr>
         <tr>
-          <td>BNB</td>
-          <td>$416.50</td>
-          <td><span class="nifty-down">-0.8%</span></td>
+            <td>BNB</td>
+            <td>$416.50</td>
+            <td><span class="nifty-down">-0.8%</span></td>
         </tr>
         <tr>
             <td>USD Coin</td>
             <td>$0.9991</td>
             <td><span class="nifty-down">-0.01%</span></td>
-          </tr>
-          <tr>
+        </tr>
+        <tr>
             <td>XRP</td>
             <td>$0.8168</td>
             <td><span class="nifty-up">+1.45</span></td>
-          </tr>
-          <tr>
+        </tr>
+        <tr>
             <td>Cardano</td>
             <td>$1.15</td>
             <td><span class="nifty-up">+2.43%</span></td>
-          </tr>
-          <tr>
+        </tr>
+        <tr>
             <td>Solana</td>
             <td>$105.86</td>
             <td><span class="nifty-up">+3.43%</span></td>
-          </tr>
-      </tbody>
+        </tr>
+        </tbody>
     </table>
-  </div>
-  >
+</div>
+>
 <!-- Tabs content -->
 
 </body>
