about and interest rate derivatives done

--- a/EquitiesTrading.html
+++ b/EquitiesTrading.html
@@ -108,6 +108,26 @@
             </div>
         </div>
 
+        <div class="card">
+            <div class="card-header nifty-accordion">
+                <a class="collapsed card-link" data-toggle="collapse" href="#collapseFour">
+                    Options Trading
+                </a>
+            </div>
+            <div id="collapseFour" class="collapse" data-parent="#accordion">
+                <div class="card-body">
+                    <p>Options trading can seem more complicated than it is. If you’re looking for a simple options trading definition, it goes something like this:
+
+                        Options trading is the trading of instruments that give you the right to buy or sell a specific security on a specific date at a specific price.
+                        
+                        An option is a contract that’s linked to an underlying asset, e.g., a stock or another security. Options contracts are good for a set time period, which could be as short as a day or as long as a couple of years.
+                        
+                        When you buy an option, you have the right to trade the underlying asset but you’re not obligated to. If you decide to do so, that’s called exercising the option.</p>
+                </div>
+            </div>
+        </div>
+
+
     </div>
 </div>
 
