about and interest rate derivatives done

--- a/aboutus.html
+++ b/aboutus.html
@@ -54,47 +54,57 @@
     </div>
 </header>
 
-<div class="about-section">
-  
-  <h2 style="text-align:center">Our Team</h2>
-  <div class="row">
-    <div class="column">
-      <div class="card">
-        <img src="img/Micky.jpg" alt="Micky" style="width:100%">
-        <div class="container">
-          <h2>Micky Mouse</h2>
-          <p class="title">CEO & Founder</p>
-          <p>Some text that describes me lorem ipsum ipsum lorem.</p>
-          <p>micky@disney.com</p>
-        </div>
-      </div>
+<div class="row row-content  align-items-center">
+    <div class="col-sm-4 col-md-3 text-center">
+        <h2>CEO</h2>
     </div>
-  
-    <div class="column">
-      <div class="card">
-        <img src="img/Dora.jpg" alt="Dora" style="width:100%">
-        <div class="container">
-          <h2>Dora</h2>
-          <p class="title">Art Director</p>
-          <p>Some text that describes me lorem ipsum ipsum lorem.</p>
-          <p>dora@nickelodeon.com</p>
+    <div class="col">
+        <div class="media">
+            <div class="media-body align-self-center">
+                <p class="d-none d-sm-block">Has 25 years of experience in the industry</p>
+            </div>
 
         </div>
-      </div>
-    </div>
-  
-    <div class="column">
-      <div class="card">
-        <img src="img/Peppa.jpg" alt="Peppa" style="width:100%">
-        <div class="container">
-          <h2>Peppa Pig</h2>
-          <p class="title">Designer</p>
-          <p>Some text that describes me lorem ipsum ipsum lorem.</p>
-          <p>peppa@nickelodeon.com</p>
+        <div class="col-4 col-sm-3 col-md-2 align-self-center">
+            <img src="img/Micky.jpg" class="img-thumbnail d-flex" />
         </div>
-      </div>
     </div>
-  </div>
 </div>
+<div class="row row-content  align-items-center">
+    <div class="col-sm-4 col-md-3 text-center">
+        <h2>CTO</h2>
+    </div>
+    <div class="col">
+        <div class="media">
+            <div class="media-body align-self-center">
+                
+                <p class="d-none d-sm-block">Has 50 years of experience
+                   </p>
+            </div>
+
+        </div>
+        <div class="col-4 col-sm-3 col-md-2 align-self-center">
+            <img src="img/Dora.jpg" class="img-thumbnail d-flex" />
+        </div>
+    </div>
+</div>
+<div class="row row-content  align-items-center">
+    <div class="col-sm-4 col-md-3 text-center">
+        <h2>CFO</h2>
+    </div>
+    <div class="col">
+        <div class="media">
+            <div class="media-body align-self-center">
+                <p class="d-none d-sm-block"> Has 100 years of experience</p>
+            </div>
+
+        </div>
+        <div class="col-4 col-sm-3 col-md-2 align-self-center">
+            <img src="img/Peppa.jpg" class="img-thumbnail d-flex" />
+        </div>
+    </div>
+</div>
+
+
 </body>
 </html>
