--- a/InterestRateDerivative.html
+++ b/InterestRateDerivative.html
@@ -22,7 +22,7 @@
 <body>
 <!-- Navigation-->
 <nav class="navbar navbar-expand-sm" id="mainNav">
-    <a href="#" class="navbar-brand nifty-menu">
+    <a href="index.html" class="navbar-brand nifty-menu">
         <img src="/img/niftytrader.ico" height="28" alt="Nifty Trader"> Nifty Trader
     </a>
     <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
@@ -41,18 +41,19 @@
 
 <header class="jumbotron jumbotron-fluid">
 
-    <div class="container">
-        <div class="row">
-            <div class="col-4 col-sm-3 col-md-2 align-self-center">
-                <img src="img/niftytrader.ico" class="img-fluid"/>
+
+
+            <div class="container">
+                <div class="row">
+                  
+                    <div class="col">
+                        <h2>Sky Is The Limit at Nifty Trader</h2>
+                    </div>
+                </div>
             </div>
-            <div class="col">
-                <h1>Stock Trading Made Easy</h1>
-                <h2>Sky Is The Limit</h2>
-            </div>
-        </div>
-    </div>
-</header>
+          </header>
+
+
 
 <div class="panel panel-default">
  
