--- a/index.html
+++ b/index.html
@@ -137,19 +137,18 @@
 </div>
 
 
-        <!-- Masthead-->
-        <header class="masthead">
-            <div class="container px-4 px-lg-5 h-50">
-                <div class="row gx-6 gx-lg-5 h-50 align-items-center justify-content-center text-center">
-                    <div class="col-lg-8 align-self-end">
-                        <h1 class="text-white font-weight-bold">Sky is the limit at Nifty Trader</h1>
 
-                    </div>
-                </div>
-            </div>
-        </header>
+<header class="jumbotron jumbotron-fluid">
 
-     
+  <div class="container">
+      <div class="row">
+        
+          <div class="col">
+              <h2>Sky Is The Limit at Nifty Trader</h2>
+          </div>
+      </div>
+  </div>
+</header>
 
         <div id="portfolio">
           <h2 class="nifty-h2 text-center">Portfolio</h2>
