--- a/EquitiesTrading.html
+++ b/EquitiesTrading.html
@@ -22,18 +22,23 @@
 <body>
 <!-- Navigation-->
 <nav class="navbar navbar-expand-sm" id="mainNav">
-    <a href="index.html" class="navbar-brand nifty-menu">
-        <img src="/img/niftytrader.ico" height="28" alt="Nifty Trader"> Nifty Trader
-    </a>
-    <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <ul class="navbar-nav ml-auto">
-        <li class="nav-item"><a class="nav-link nifty-menu" href="index.html">Home</a></li>
-        <li class="nav-item"><a class="nav-link nifty-menu" href="index.html#portfolio">Portfolio</a></li>
-        <li class="nav-item"><a class="nav-link nifty-menu" href="index.html#contact">Contact</a></li>
-    </ul>
-</nav>
+    <div class="container m-0">
+      <a href="#" class="navbar-brand nifty-menu order-md-first">
+          <img src="/img/niftytrader.ico" height="28" alt="Nifty Trader"> Nifty Trader
+      </a>
+      <button type="button" class="navbar-toggler icon-bar" data-toggle="collapse" data-target="#navbarCollapse">
+          <span class="navbar-toggler-icon"></span>
+      </button>
+        <div class="collapse navbar-collapse" id="navbarCollapse">
+              <ul class="navbar-nav ml-auto">
+                <li class="nav-item"><a class="nav-link nifty-menu" href="./index.html">Home</a></li>                  
+                <li class="nav-item"><a class="nav-link nifty-menu" href="./aboutus.html">About</a></li>
+                <li class="nav-item"><a class="nav-link nifty-menu" href="./index.html#portfolio">Portfolio</a></li>
+                <li class="nav-item"><a class="nav-link nifty-menu" href="./index.html/#contact">Contact</a></li>
+              </ul>
+            </div>
+      </div>
+  </nav>
 
 
 <header class="jumbotron jumbotron-fluid">
@@ -127,7 +132,9 @@
     </div>
 </div>
 
-<!-- Tabs content -->
+<footer class="bg-light py-5">
+    <div class="container px-4 px-lg-5"><div class="small text-center text-muted">Copyright &copy; 2021 - Nifty Trader</div></div>
+</footer>
 
 </body>
 </html>
